# numista2wikidata

./: .gitignore  README.md  coin_info.qs  new_coins.qs  pyproject.toml  setup.cfg
data/: catalogue_artists.csv  catalogue_countries.csv
src/: dictionaries.py  get_coin_info  get_coin_info.py  get_missing_coin_info  get_missing_coin_info.py  get_multiple_coin_info.py  helper.py  parse_xavier_info_into_dict.py  reprint_json.py
src/dictionaries/: all.py  composition.json  composition.py  currency.json  currency.py  depict.json  depict.py  dictionaries.py  engraver.json  engraver.py  issuer.json  issuer.py  language.json  language.py  manufacturing.json  mint.json  scripts.json  series.json  series.py  shapes.json
src/numista2wikidata/: cli.py  get_coin_info.py  get_missing_coin_info.py  helper.py
src/numista2wikidata.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
