[metadata]
name = numista2wikidata
version = 0.0.2-dev
description = Integrate numista data to Wikidata on demand
long_description = file: README.md
long_description_content_type = text/markdown

license = MIT
license_file = LICENSE

[options]
install_requires =
    wdcuration
    clipboard
    requests
    SPARQLWrapper
    click

zip_safe = false
include_package_data = true

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src


[options.extras_require]
tests =
    pytest

[options.entry_points]
console_scripts =
    numis = numista2wikidata.cli:cli